--- a/index.html
+++ b/index.html
@@ -10,17 +10,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="font-poppins container mx-auto">
 
      <header>
-         <nav class="container mx-auto flex justify-between mt-12">
+        <!-- navbar section -->
+         <nav class=" flex justify-between mt-12">
             <div>
             <h1 class="text-2xl font-bold">Hot Gadgets</h1>
             </div>
             <div>
-               <button class="primary-btn">Sign Up</button>
+               <button class="btn-primary">Sign Up</button>
             </div>
          </nav>
+         <!-- Banner Section -->
+          <div class="mt-12">
+            <div class="space-y-6 max-w-[800px] mx-auto text-center">
+                <h1 class="text-6xl font-bold">Apple Iphone 13 Pro Max</h1>
+                <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou.</p>
+                <button class="btn-primary">Buy Now</button>
+            </div>
+            <!-- banner img -->
+             <div>
+                <div>
+                    
+                </div>
+             </div>
+          </div>
      </header>
      <main>
 
