added banner section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
      <header>
         <!-- navbar section -->
-         <nav class=" flex justify-between mt-12">
+         <nav class="p-5 lg:p-0 flex justify-between items-center mt-12">
             <div>
             <h1 class="text-2xl font-bold">Hot Gadgets</h1>
             </div>
@@ -23,16 +23,17 @@
             </div>
          </nav>
          <!-- Banner Section -->
-          <div class="mt-12">
+          <div class="mt-12 p-5 lg:p-0">
+            <!-- banner content -->
             <div class="space-y-6 max-w-[800px] mx-auto text-center">
-                <h1 class="text-6xl font-bold">Apple Iphone 13 Pro Max</h1>
+                <h1 class="text-4xl lg:text-6xl font-bold">Apple Iphone 13 Pro Max</h1>
                 <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou.</p>
                 <button class="btn-primary">Buy Now</button>
             </div>
             <!-- banner img -->
-             <div>
-                <div>
-                    
+             <div class="mt-12 flex justify-center">
+                <div class="">
+                   <img src="//i.ibb.co.com/8NvmWQw/Group-48095420.png">
                 </div>
              </div>
           </div>
