added phone search section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="font-poppins container mx-auto">
@@ -39,10 +40,19 @@
           </div>
      </header>
      <main>
-
+         <!-- search input section -->
+          <div class="flex justify-between py-4 px-4 bg-purple-200 rounded-lg max-w-[800px] mx-auto">
+            <div class="flex justify-center items-center gap-2">
+               <span><i class="fa-solid fa-magnifying-glass text-2xl"></i></span>
+               <input class="text-xl font-semibold bg-purple-200 outline-none" type="text" placeholder="Search youe phone">
+            </div>
+            <div>
+               <button class="btn btn-info text-white py-4 px-9">Search</button>
+            </div>
+          </div>
      </main>
      <footer>
-
+     
      </footer>
 
 
